update website text

--- a/websitecode/templates/index.html
+++ b/websitecode/templates/index.html
@@ -73,8 +73,13 @@
 			<!-- Panel (Spotlight) -->
 			<section class="panel spotlight large left">
 				<div class="content span-5">
-					<h2 class="major">Metro Gothic</h2>
-					<p>My books are dark and in a urban enviroment. </p>
+					<h2 class="major">Seouless</h2>
+					<p>I feel that your mind is like an empty stomach and you're hungry. I'm not telling a story, but
+						serving you a metaphorical steak. Satisfying your famished mind with my wisdom.
+						But unlike the waiting staff of this capitalist society I wont ask you for a tip, for simply
+						filling you up is where I get my true satisfaction. So no, I wont accept your money!
+
+						Buy Seouless now for 6.99 </p>
 				</div>
 				<div class="image filtered tinted" data-position="top right">
 					<img src="static/images/pic03.jpg" alt="" />
