--- a/website-code/templates/index.html
+++ b/website-code/templates/index.html
@@ -36,7 +36,7 @@
 					</ul>
 				</div>
 				<div class="image filtered span-1-75" data-position="25% 25%">
-					<img src="static/images/pic01.jpg" alt="" />
+					<img src="static/images/shayne01.jpeg" alt="" />
 				</div>
 			</section>
 
@@ -44,11 +44,19 @@
 			<section class="panel spotlight medium right" id="first">
 				<div class="content span-7">
 					<h2 class="major">About me</h2>
-					<p>Here is some text talking about me and how awesome i am.
+					<p>Hailing from the great city of Bristol has gifted him the extra challenge of trying not to sound
+						(or write) like a cross between a farmer and a pirate, especially since he decided to teach in
+						Hong Kong. However he considers it one his greatest contributions that many a child is fully
+						equipped with an inner lexicon of Bristolian slang. In his free time he enjoys spending time
+						with the greatest thing that has ever happened to him; his daughter. She won’t be able to read
+						his books for a good number of years yet, but one day he hopes she does and hopes that she
+						enjoys them. Sometimes escapism is necessary and the best way to escape is a good book. Shayne
+						has read many. If he has written one is yet to be seen. They say everyone has one good book in
+						them. So if anything, this could be seen as some kind of experiment.
 					</p>
 				</div>
 				<div class="image filtered tinted" data-position="top left">
-					<img src="static/images/pic02.jpg" alt="" />
+					<img src="static/images/shayne02.jpeg" alt="" />
 				</div>
 			</section>
 
@@ -74,36 +82,50 @@
 			<section class="panel spotlight large left">
 				<div class="content span-5">
 					<h2 class="major">Seouless</h2>
-					<p>I feel that your mind is like an empty stomach and you're hungry. I'm not telling a story, but
-						serving you a metaphorical steak. Satisfying your famished mind with my wisdom.
-						But unlike the waiting staff of this capitalist society I wont ask you for a tip, for simply
-						filling you up is where I get my true satisfaction. So no, I wont accept your money!
-
-						Buy Seouless now for 6.99 </p>
+					<p><strong>''You, who have hurt many, physically, mentally, emotionally, are under the
+							impression that you
+							can go through life without retribution. However, your crime is having the ego to believe
+							that
+							you can decide when your time has run out, you have imitated my work for long enough. Death
+							is
+							master to all life, in time you will understand that.'' </strong></p>
+					<br>
+					<a href="/">
+						<h4>Learn More</h4>
+					</a>
+					<!-- <p>High above the streets of Seoul, forty-five year old, Park Jong-sup has decided to end it all.
+						Bigoted, cruel and foul, he is the type of man the world may be better off without.
+						Watching him for some time though, is none other than Death herself, and she has other plans.
+						Ripping the privilege of death from the suicidal man, he falls from the building, only to scrape
+						himself from the pavement. Some may consider this a gift, to Jong-sup it’s a curse.</p>
+					<br>
+					<p>With his new unwanted lease on life he must face the problems (and responsibilities) he sought
+						to escape head on. The journey to remedy his affliction will lead Jong-sup into contact with
+						violent gang members, an insane psychopath and one innocent but unfortunate young girl. </p> -->
 				</div>
 				<div class="image filtered tinted" data-position="top right">
-					<img src="static/images/pic03.jpg" alt="" />
+					<img src="static/images/Seouless.jpg" alt="" />
 				</div>
 			</section>
 
 			<!-- Panel -->
 			<section class="panel">
 				<div class="intro color2">
-					<h2 class="major">Other books</h2>
-					<p>I am writing a new book too</p>
+					<h2 class="major">My Books</h2>
+					<p>This area shows the list of my published works</p>
 				</div>
 				<div class="gallery">
-					<div class="group span-3">
+					<!-- <div class="group span-3">
 						<a href="static/images/gallery/fulls/01.jpg" class="image filtered span-3"
 							data-position="bottom"><img src="static/images/gallery/thumbs/01.jpg" alt="" /></a>
 						<a href="static/images/gallery/fulls/02.jpg" class="image filtered span-1-5"
 							data-position="center"><img src="static/images/gallery/thumbs/02.jpg" alt="" /></a>
 						<a href="static/images/gallery/fulls/03.jpg" class="image filtered span-1-5"
 							data-position="bottom"><img src="static/images/gallery/thumbs/03.jpg" alt="" /></a>
-					</div>
+					</div> -->
 					<a href="static/images/gallery/fulls/04.jpg" class="image filtered span-2-5"
-						data-position="top"><img src="static/images/gallery/thumbs/04.jpg" alt="" /></a>
-					<div class="group span-4-5">
+						data-position="top"><img src="static/images/Seouless.jpg" alt="" /></a>
+					<!-- <div class="group span-4-5">
 						<a href="static/images/gallery/fulls/05.jpg" class="image filtered span-3"
 							data-position="top"><img src="static/images/gallery/thumbs/05.jpg" alt="" /></a>
 						<a href="static/images/gallery/fulls/06.jpg" class="image filtered span-1-5"
@@ -112,7 +134,7 @@
 							data-position="bottom"><img src="static/images/gallery/thumbs/07.jpg" alt="" /></a>
 						<a href="static/images/gallery/fulls/08.jpg" class="image filtered span-3"
 							data-position="top"><img src="static/images/gallery/thumbs/08.jpg" alt="" /></a>
-					</div>
+					</div> -->
 					<a href="static/images/gallery/fulls/09.jpg" class="image filtered span-2-5"
 						data-position="right"><img src="static/images/gallery/thumbs/09.jpg" alt="" /></a>
 				</div>
@@ -122,7 +144,7 @@
 			<section class="panel color4-alt">
 				<div class="intro color4">
 					<h2 class="major">Contact</h2>
-					<p>Don't talk to me, i get scared</p>
+					<p>If you have any feedback I would love to hear it</p>
 				</div>
 				<div class="inner columns divided">
 					<div class="span-3-25">
@@ -148,11 +170,11 @@
 					</div>
 					<div class="span-1-5">
 						<ul class="contact-icons color1">
-							<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
+							<li class="icon brands fa-envelope"><a href="#">smeissnerbooks@gmail.com</a></li>
 							<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
-							<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
+							<!-- <li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
 							<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-							<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+							<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li> -->
 						</ul>
 					</div>
 				</div>
