add new page to site

--- a/website-code/templates/index.html
+++ b/website-code/templates/index.html
@@ -90,7 +90,7 @@
 							is
 							master to all life, in time you will understand that.'' </strong></p>
 					<br>
-					<a href="/">
+					<a href="/seouless">
 						<h4>Learn More</h4>
 					</a>
 					<!-- <p>High above the streets of Seoul, forty-five year old, Park Jong-sup has decided to end it all.
